# vrl-web

./: .env.local  .gitignore  .gitmodules  .postcssrc  Dockerfile  Makefile  README.md  fly.toml  netlify.toml  package.json
.github/workflows/: deploy.yml  server.yml
client/: .env.local  .env.production  Makefile  package.json  tailwind.config.js
client/src/: App.js  Navbar.js  client.ts  helpers.js  index.html  index.js  mode.ts  scenarios.yaml  state.js  state.ts  style.css  values.js  vrl.ts
client/src/components/: App.js  App.tsx  Code.js  Docs.js  Docs.tsx  ErrorDisplay.tsx  ErrorHandler.tsx  Event.js  EventEditor.tsx  Export.tsx  Footer.js  Footer.tsx  Functions.js  Help.js  Main.js  Main.tsx  Navbar.js  Navbar.tsx  NotFound.js  NotFound.tsx  Out.tsx  Program.js  ProgramEditor.tsx  Resolved.js  Result.tsx  Title.tsx
server/: Cargo.toml  Makefile.toml  rust-toolchain.toml
server-http/: Dockerfile  Makefile  fly.toml
server-http/src/: lib.rs  main.rs
server/api/: openapi.yaml
server/src/: funcs.rs  info.rs  lib.rs  main.rs  resolve.rs  server.rs
src/: App.js  index.html  scenarios.yaml
vrl-web-client/: .browserslistrc  .env.local  .env.production  .gitignore  Makefile  README.md  next.config.js  package.json  tailwind.config.js
vrl-web-client/components/: Footer.tsx  Layout.tsx  Main.tsx  Navbar.tsx  Svg.tsx
vrl-web-client/components/icons/: VectorDarkIcon.tsx  VectorLightIcon.tsx
vrl-web-client/lib/data/: client.ts  scenarios.ts  state.ts  storage.ts  vrl.ts
vrl-web-client/lib/types/: props.ts
vrl-web-client/pages/: _app.tsx  _document.tsx  index.tsx  vrl.tsx
vrl-web-client/src/: client.ts  contants.ts  index.html  index.tsx  state.ts  storage.ts  style.css  values.js  vrl.ts
vrl-web-server-warp/: Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  fly.toml  rust-toolchain.toml
vrl-web-server-warp/scripts/: setup.sh
vrl-web-server-warp/src/: error.rs  funcs.rs  health.rs  info.rs  resolve.rs  server.rs
(+26 files in other folders)
