[package]
name = "vrl-server"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2.5"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.71"
structopt = { version = "0.3.25", default-features = false }
tokio = { version = "1.14.0", default-features = false, features = ["full"] }
vector-shared = { package = "shared", git = "https://github.com/vectordotdev/vector" }
vrl = { git = "https://github.com/vectordotdev/vector" }
vrl-stdlib = { git = "https://github.com/vectordotdev/vector" }
warp = "0.3.2"
